--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 				<ul class="contacts list">
 					<li class="contacts-item">
 						<a class="contacts-link link" href="mailto:info@devstudio.com">
-							<svg class="social-link" width="16px" height="12px">
+							<svg class="mail-icon" width="16px" height="12px">
 								<use href="./images/icons.svg.svg#icon-envelope-hover"></use>
 							</svg>info@devstudio.com
 						</a>
 					</li>
 					<li class="contacts-item fon">
 						<a class="contacts-link link" href="tel:+380961111111">
-							<svg class="social-link" width="10px" height="16px">
+							<svg class="tel-icon" width="10px" height="16px">
 								<use href="./images/icons.svg.svg#icon-Vector">
 								</use>
 						        </svg>+38 096 111 11 11
@@ -364,8 +364,9 @@
 				</div>
 			</section>
 		</main>
-		<footer class="page-footer section">
-			<div class="container footer-div">
+		<footer class="page-footer ">
+		  <div class="container ftr">
+			<div class=" footer-div">
 				<a class="logo-footer link" href="./index.html"><span class="accent">Web</span>Studio</a>
 				<address>
 					<ul class="footer-contacts list">
@@ -381,33 +382,33 @@
 					</ul>
 				</address>
 			</div>
-			<div class="container footer-icon">
+			<div class="footer-icon">
 				<h3 class="foot-links">ПРИЄДНУЙТЕСЬ</h3>
 				<ul class="social-footer list">
 					<li class="social-footer-item">
 						<a href="" class="social-footer-link link">
-							<svg aria-label="іконка твітер" class="footer-icon" width="20" height="20">
+							<svg aria-label="іконка твітер" class="footer-iconf" width="20" height="20">
 								<use href="./images/icons.svg.svg#icon-instagram"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-footer-item">
 						<a href="" class="social-footer-link link">
-							<svg aria-label="іконка твітер" class="footer-icon" width="20" height="20">
+							<svg aria-label="іконка твітер" class="footer-iconf" width="20" height="20">
 								<use href="./images/icons.svg.svg#icon-twitter"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-footer-item">
 						<a href="" class="social-footer-link link">
-							<svg aria-label="іконка фейсбук" class="footer-icon" width="20" height="20">
+							<svg aria-label="іконка фейсбук" class="footer-iconf" width="20" height="20">
 								<use href="./images/icons.svg.svg#icon-facebook"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-footer-item">
 						<a href="" class="social-footer-link link">
-							<svg aria-label="іконка лінкедін" class="footer-icon" width="20" height="20">
+							<svg aria-label="іконка лінкедін" class="footer-iconf" width="20" height="20">
 								<use href="./images/icons.svg.svg#icon-linkedin"></use>
 							</svg>
 						</a>
@@ -416,6 +417,7 @@
 
 
 			</div>
+		</div>
 		</footer>
 	</body>
 </html>
