--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,21 @@
 				</nav>
 
 				<ul class="contacts list">
-					<li class="contacts-item fon"
-						><a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></li
-					>
-					<li class="contacts-item"
-						><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li
-					>
+					<li class="contacts-item">
+						<a class="contacts-link link" href="mailto:info@devstudio.com">
+							<svg class="mail-icon" width="16px" height="12px">
+								<use href="./images/icons.svg.svg#icon-envelope-hover"></use>
+							</svg>info@devstudio.com
+						</a>
+					</li>
+					<li class="contacts-item fon">
+						<a class="contacts-link link" href="tel:+380961111111">
+							<svg class="tel-icon" width="10px" height="16px">
+								<use href="./images/icons.svg.svg#icon-Vector">
+								</use>
+						        </svg>+38 096 111 11 11
+						</a>
+					</li>
 				</ul>
 			</div>
 		</header>
@@ -163,58 +172,60 @@
 			</div>
 			</section>
 		</main>
-		<footer class="page-footer section">
-			<div class="container footer-div">
-				<a class="logo-footer link" href="./index.html"><span class="accent">Web</span>Studio</a>
-				<address>
-					<ul class="footer-contacts list">
-						<li class="footer-contacts-item">
-							<a class="footer-contact-adr link" href="">м. Київ, пр-т Лесі Українки, 26</a>
-						</li>
-						<li class="footer-contacts-item">
-							<a class="footer-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-						</li>
-						<li class="footer-contacts-item">
-							<a class="footer-contact link" href="tel:+380961111111">+38 096 111 11 11</a>
-						</li>
-					</ul>
-				</address>
-			</div>
-			<div class="container footer-icon">
-				<h3 class="foot-links">ПРИЄДНУЙТЕСЬ</h3>
-				<ul class="social-footer list">
-					<li class="social-footer-item">
-						<a href="" class="social-footer-link link">
-							<svg aria-label="іконка твітер" class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg.svg#icon-instagram"></use>
-							</svg>
-						</a>
-					</li>
-					<li class="social-footer-item">
-						<a href="" class="social-footer-link link">
-							<svg aria-label="іконка твітер" class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg.svg#icon-twitter"></use>
-							</svg>
-						</a>
-					</li>
-					<li class="social-footer-item">
-						<a href="" class="social-footer-link link">
-							<svg aria-label="іконка фейсбук" class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg.svg#icon-facebook"></use>
-							</svg>
-						</a>
-					</li>
-					<li class="social-footer-item">
-						<a href="" class="social-footer-link link">
-							<svg aria-label="іконка лінкедін" class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg.svg#icon-linkedin"></use>
-							</svg>
-						</a>
-					</li>
-				</ul>
-
-
-			</div>
-		</footer>
+		<footer class="page-footer ">
+			<div class="container ftr">
+			  <div class=" footer-div">
+				  <a class="logo-footer link" href="./index.html"><span class="accent">Web</span>Studio</a>
+				  <address>
+					  <ul class="footer-contacts list">
+						  <li class="footer-contacts-item">
+							  <a class="footer-contact-adr link" href="">м. Київ, пр-т Лесі Українки, 26</a>
+						  </li>
+						  <li class="footer-contacts-item">
+							  <a class="footer-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+						  </li>
+						  <li class="footer-contacts-item">
+							  <a class="footer-contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+						  </li>
+					  </ul>
+				  </address>
+			  </div>
+			  <div class="footer-icon">
+				  <h3 class="foot-links">ПРИЄДНУЙТЕСЬ</h3>
+				  <ul class="social-footer list">
+					  <li class="social-footer-item">
+						  <a href="" class="social-footer-link link">
+							  <svg aria-label="іконка твітер" class="footer-iconf" width="20" height="20">
+								  <use href="./images/icons.svg.svg#icon-instagram"></use>
+							  </svg>
+						  </a>
+					  </li>
+					  <li class="social-footer-item">
+						  <a href="" class="social-footer-link link">
+							  <svg aria-label="іконка твітер" class="footer-iconf" width="20" height="20">
+								  <use href="./images/icons.svg.svg#icon-twitter"></use>
+							  </svg>
+						  </a>
+					  </li>
+					  <li class="social-footer-item">
+						  <a href="" class="social-footer-link link">
+							  <svg aria-label="іконка фейсбук" class="footer-iconf" width="20" height="20">
+								  <use href="./images/icons.svg.svg#icon-facebook"></use>
+							  </svg>
+						  </a>
+					  </li>
+					  <li class="social-footer-item">
+						  <a href="" class="social-footer-link link">
+							  <svg aria-label="іконка лінкедін" class="footer-iconf" width="20" height="20">
+								  <use href="./images/icons.svg.svg#icon-linkedin"></use>
+							  </svg>
+						  </a>
+					  </li>
+				  </ul>
+  
+  
+			  </div>
+		  </div>
+		  </footer>
 	</body>
 </html>
