--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,7 @@
 					</ul>
 					<ul class="page-products list">
 						<li class="portf-pic">
+							<a class="portf-link">
 							<img
 								class="products-img"
 								src="./images/project-img.jpg"
@@ -76,8 +77,10 @@
 								<h2 class="product-main">Технокряк </h2>
 								<p class="product-card">Веб-сайт</p>
 							</div>
+						</a>
 						</li>
 						<li class="portf-pic">
+							<a class="portf-link">
 							<img
 								class="products-img"
 								src="./images/project-img-1.jpg"
@@ -88,8 +91,10 @@
 								<h2 class="product-main">Постер New Orlean vs Golden Star</h2>
 								<p class="product-card">Дизайн</p>
 							</div>
+						</a>
 						</li>
 						<li class="portf-pic">
+							<a class="portf-link">
 							<img
 								class="products-img"
 								src="./images/project-img-2.jpg"
@@ -99,15 +104,19 @@
 							<div class="products-items">
 								 <h2 class="product-main">Ресторан Seafood</h2>
 								  <p class="product-card">Додаток</p> </div>
+								</a>
 						</li>
 						<li class="portf-pic">
+							<a class="portf-link">
 							<img class="products-img" src="./images/project-img-3.jpg" alt="великі чорні навушники" width="370" />
 							<div class="products-items">
 								<h2 class="product-main">Проєкт Prime</h2>
 								 <p class="product-card">Маркетинг</p>
 								</div>
+							</a>
 						</li>
 						<li class="portf-pic">
+							<a class="portf-link">
 							<img
 								class="products-img"
 								src="./images/project-img-4.jpg"
@@ -118,8 +127,10 @@
 								<h2 class="product-main">Проєкт Boxes</h2>
 								<p class="product-card">Додаток</p>
 							</div>
+						</a>
 						</li>
 						<li class="portf-pic">
+							<a class="portf-link">
 							<img
 								class="products-img"
 								src="./images/project-img-5.jpg"
@@ -130,8 +141,10 @@
 								<h2 class="product-main">Inspiration has no Borders</h2>
 								<p class="product-card">Веб-сайт</p>
 							</div>
+						</a>
 						</li>
 						<li class="portf-pic">
+							<a class="portf-link">
 							<img
 								class="products-img"
 								src="./images/project-img-6.jpg"
@@ -142,8 +155,10 @@
 								<h2 class="product-main">Видання Limited Edition</h2>
 								<p class="product-card">Дизайн</p>
 							</div>
+						</a>
 						</li>
 						<li class="portf-pic">
+							<a class="portf-link">
 							<img
 								class="products-img"
 								src="./images/project-img-7.jpg"
@@ -154,8 +169,10 @@
 								<h2 class="product-main">Проєкт LAB </h2>
 								<p class="product-card">Маркетинг</p>
 							</div>
+						</a>
 						</li>
 						<li class="portf-pic">
+							<a class="portf-link">
 							<img
 								class="products-img"
 								src="./images/project-img-8.jpg"
@@ -166,6 +183,7 @@
 								<h2 class="product-main" >Growing Business</h2>
 								<p class="product-card">Додаток</p></div
 							>
+						</a>
 						</li>
 					</ul>
 				<!-- </section> -->
