--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 					<ul class="list section-our-clients">
 						<li class="clients-company">
 							<a href="" class="clients-link"> 
-							<svg class="clients" width="160" height="60">
+							<svg class="clients" width="106" height="60">
 								<use href="./images/icons.svg.svg#icon-clients1">									
 								</use>
 							</svg>
@@ -327,35 +327,35 @@
 						</li>
 						<li class="clients-company">
 							<a href="" class="clients-link"> 
-							<svg class="clients" width="160" height="60">
+							<svg class="clients" width="106" height="60">
 								<use href="./images/icons.svg.svg#icon-clients2"></use>
 							</svg>
 							</a>
 						</li>
 						<li class="clients-company">
 							<a href="" class="clients-link"> 
-							<svg class="clients" width="160" height="60">
+							<svg class="clients" width="106" height="60">
 								<use href="./images/icons.svg.svg#icon-clients3"></use>
 							</svg>
 						</a>	
 						</li>
 						<li class="clients-company">
 							<a href="" class="clients-link"> 
-							<svg class="clients" width="160" height="60">
+							<svg class="clients" width="106" height="60">
 								<use href="./images/icons.svg.svg#icon-clients4"></use>
 							</svg>
 							</a>
 						</li>
 						<li class="clients-company">
 							<a href="" class="clients-link"> 
-							<svg class="clients" width="160" height="60">
+							<svg class="clients" width="106" height="60">
 								<use href="./images/icons.svg.svg#icon-clients5"></use>
 							</svg>
 							</a>
 						</li>
 						<li class="clients-company">
 							<a href="" class="clients-link"> 
-							<svg class="clients" width="160" height="60">
+							<svg class="clients" width="106" height="60">
 								<use href="./images/icons.svg.svg#icon-clients6"></use>
 							</svg>
 							</a>
@@ -383,7 +383,7 @@
 				</address>
 			</div>
 			<div class="footer-icon">
-				<h3 class="foot-links">ПРИЄДНУЙТЕСЬ</h3>
+				<p class="foot-links">Приєднуйтесь</p>
 				<ul class="social-footer list">
 					<li class="social-footer-item">
 						<a href="" class="social-footer-link link">
