--- a/portfolio.html
+++ b/portfolio.html
@@ -33,16 +33,15 @@
 					<li class="contacts-item">
 						<a class="contacts-link link" href="mailto:info@devstudio.com">
 							<svg class="mail-icon" width="16px" height="12px">
-								<use href="./images/icons.svg.svg#icon-envelope-hover"></use>
-							</svg>info@devstudio.com
+								<use href="./images/icons.svg.svg#icon-envelope-hover"></use></svg
+							>info@devstudio.com
 						</a>
 					</li>
 					<li class="contacts-item fon">
 						<a class="contacts-link link" href="tel:+380961111111">
 							<svg class="tel-icon" width="10px" height="16px">
-								<use href="./images/icons.svg.svg#icon-Vector">
-								</use>
-						        </svg>+38 096 111 11 11
+								<use href="./images/icons.svg.svg#icon-Vector"></use></svg
+							>+38 096 111 11 11
 						</a>
 					</li>
 				</ul>
@@ -50,8 +49,8 @@
 		</header>
 		<main>
 			<section class="page-prtfolio">
-			<div class="container">
-				<!-- <section class="portfolio container"> -->
+				<div class="container">
+					<!-- <section class="portfolio container"> -->
 					<h1 class="visually-hidden"> Портфоліо </h1>
 					<ul class="products-nav list">
 						<li class="product">
@@ -66,184 +65,183 @@
 					</ul>
 					<ul class="page-products list">
 						<li class="portf-pic">
-							<a class="portf-link">
-							<img
-								class="products-img"
-								src="./images/project-img.jpg"
-								alt="фото трьох членів команди, дві дівчини і один чоловік в окулярах"
-								width="370"
-							/>
-							<div class="products-items">
-								<h2 class="product-main">Технокряк </h2>
-								<p class="product-card">Веб-сайт</p>
-							</div>
-						</a>
-						</li>
-						<li class="portf-pic">
-							<a class="portf-link">
-							<img
-								class="products-img"
-								src="./images/project-img-1.jpg"
-								alt="двє хлопців в спортивній формі різних команд грають в м'яча, один тримає м'яч, другий вибиває його з його рук"
-								width="370"
-							/>
-							<div class="products-items">
-								<h2 class="product-main">Постер New Orlean vs Golden Star</h2>
-								<p class="product-card">Дизайн</p>
-							</div>
-						</a>
-						</li>
-						<li class="portf-pic">
-							<a class="portf-link">
-							<img
-								class="products-img"
-								src="./images/project-img-2.jpg"
-								alt="картинка з малюнком риби та логотипом рибного ресторану"
-								width="370"
-							/>
-							<div class="products-items">
-								 <h2 class="product-main">Ресторан Seafood</h2>
-								  <p class="product-card">Додаток</p> </div>
-								</a>
-						</li>
-						<li class="portf-pic">
-							<a class="portf-link">
-							<img class="products-img" src="./images/project-img-3.jpg" alt="великі чорні навушники" width="370" />
-							<div class="products-items">
-								<h2 class="product-main">Проєкт Prime</h2>
-								 <p class="product-card">Маркетинг</p>
+							<a href="" class="portf-link link">
+								<img
+									class="products-img"
+									src="./images/project-img.jpg"
+									alt="фото трьох членів команди, дві дівчини і один чоловік в окулярах"
+									width="370"
+								/>
+								<div class="products-items">
+									<h2 class="product-main">Технокряк </h2>
+									<p class="product-card">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
 						<li class="portf-pic">
-							<a class="portf-link">
-							<img
-								class="products-img"
-								src="./images/project-img-4.jpg"
-								alt="дві коробочки, одна невелика коліру темного картону, друга більша трохи білого кольору"
-								width="370"
-							/>
-							<div class="products-items">
-								<h2 class="product-main">Проєкт Boxes</h2>
-								<p class="product-card">Додаток</p>
-							</div>
-						</a>
+							<a href="" class="portf-link link">
+								<img
+									class="products-img"
+									src="./images/project-img-1.jpg"
+									alt="двє хлопців в спортивній формі різних команд грають в м'яча, один тримає м'яч, другий вибиває його з його рук"
+									width="370"
+								/>
+								<div class="products-items">
+									<h2 class="product-main">Постер New Orlean vs Golden Star</h2>
+									<p class="product-card">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="portf-pic">
-							<a class="portf-link">
-							<img
-								class="products-img"
-								src="./images/project-img-5.jpg"
-								alt="великий чорний монітор епл на срібній ніжці"
-								width="370"
-							/>
-							<div class="products-items">
-								<h2 class="product-main">Inspiration has no Borders</h2>
-								<p class="product-card">Веб-сайт</p>
-							</div>
-						</a>
+							<a href="" class="portf-link link">
+								<img
+									class="products-img"
+									src="./images/project-img-2.jpg"
+									alt="картинка з малюнком риби та логотипом рибного ресторану"
+									width="370"
+								/>
+								<div class="products-items">
+									<h2 class="product-main">Ресторан Seafood</h2>
+									<p class="product-card">Додаток</p>
+								</div>
+							</a>
 						</li>
 						<li class="portf-pic">
-							<a class="portf-link">
-							<img
-								class="products-img"
-								src="./images/project-img-6.jpg"
-								alt="розворот книги з різними зображеннями жінок"
-								width="370"
-							/>
-							<div class="products-items">
-								<h2 class="product-main">Видання Limited Edition</h2>
-								<p class="product-card">Дизайн</p>
-							</div>
-						</a>
+							<a href="" class="portf-link link">
+								<img class="products-img" src="./images/project-img-3.jpg" alt="великі чорні навушники" width="370" />
+								<div class="products-items">
+									<h2 class="product-main">Проєкт Prime</h2>
+									<p class="product-card">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="portf-pic">
-							<a class="portf-link">
-							<img
-								class="products-img"
-								src="./images/project-img-7.jpg"
-								alt="біла бірка з чорним надписом"
-								width="370"
-							/>
-							<div class="products-items">
-								<h2 class="product-main">Проєкт LAB </h2>
-								<p class="product-card">Маркетинг</p>
-							</div>
-						</a>
+							<a href="" class="portf-link link">
+								<img
+									class="products-img"
+									src="./images/project-img-4.jpg"
+									alt="дві коробочки, одна невелика коліру темного картону, друга більша трохи білого кольору"
+									width="370"
+								/>
+								<div class="products-items">
+									<h2 class="product-main">Проєкт Boxes</h2>
+									<p class="product-card">Додаток</p>
+								</div>
+							</a>
 						</li>
 						<li class="portf-pic">
-							<a class="portf-link">
-							<img
-								class="products-img"
-								src="./images/project-img-8.jpg"
-								alt="чоловічі руки на клавіатурі відкритого ноутбука, на моніторі картинка з надписом зростання бізнесу"
-								width="370"
-							/>
-							<div class="products-items">
-								<h2 class="product-main" >Growing Business</h2>
-								<p class="product-card">Додаток</p></div
-							>
-						</a>
+							<a href="" class="portf-link link">
+								<img
+									class="products-img"
+									src="./images/project-img-5.jpg"
+									alt="великий чорний монітор епл на срібній ніжці"
+									width="370"
+								/>
+								<div class="products-items">
+									<h2 class="product-main">Inspiration has no Borders</h2>
+									<p class="product-card">Веб-сайт</p>
+								</div>
+							</a>
+						</li>
+						<li class="portf-pic">
+							<a href="" class="portf-link link">
+								<img
+									class="products-img"
+									src="./images/project-img-6.jpg"
+									alt="розворот книги з різними зображеннями жінок"
+									width="370"
+								/>
+								<div class="products-items">
+									<h2 class="product-main">Видання Limited Edition</h2>
+									<p class="product-card">Дизайн</p>
+								</div>
+							</a>
+						</li>
+						<li class="portf-pic">
+							<a href="" class="portf-link link">
+								<img
+									class="products-img"
+									src="./images/project-img-7.jpg"
+									alt="біла бірка з чорним надписом"
+									width="370"
+								/>
+								<div class="products-items">
+									<h2 class="product-main">Проєкт LAB </h2>
+									<p class="product-card">Маркетинг</p>
+								</div>
+							</a>
+						</li>
+						<li class="portf-pic">
+							<a href="" class="portf-link link">
+								<img
+									class="products-img"
+									src="./images/project-img-8.jpg"
+									alt="чоловічі руки на клавіатурі відкритого ноутбука, на моніторі картинка з надписом зростання бізнесу"
+									width="370"
+								/>
+								<div class="products-items">
+									<h2 class="product-main">Growing Business</h2>
+									<p class="product-card">Додаток</p></div
+								>
+							</a>
 						</li>
 					</ul>
-				<!-- </section> -->
-			</div>
+					<!-- </section> -->
+				</div>
 			</section>
 		</main>
-		<footer class="page-footer ">
+		<footer class="page-footer">
 			<div class="container ftr">
-			  <div class=" footer-div">
-				  <a class="logo-footer link" href="./index.html"><span class="accent">Web</span>Studio</a>
-				  <address>
-					  <ul class="footer-contacts list">
-						  <li class="footer-contacts-item">
-							  <a class="footer-contact-adr link" href="">м. Київ, пр-т Лесі Українки, 26</a>
-						  </li>
-						  <li class="footer-contacts-item">
-							  <a class="footer-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-						  </li>
-						  <li class="footer-contacts-item">
-							  <a class="footer-contact link" href="tel:+380961111111">+38 096 111 11 11</a>
-						  </li>
-					  </ul>
-				  </address>
-			  </div>
-			  <div class="footer-icon">
-				  <h3 class="foot-links">ПРИЄДНУЙТЕСЬ</h3>
-				  <ul class="social-footer list">
-					  <li class="social-footer-item">
-						  <a href="" class="social-footer-link link">
-							  <svg aria-label="іконка твітер" class="footer-iconf" width="20" height="20">
-								  <use href="./images/icons.svg.svg#icon-instagram"></use>
-							  </svg>
-						  </a>
-					  </li>
-					  <li class="social-footer-item">
-						  <a href="" class="social-footer-link link">
-							  <svg aria-label="іконка твітер" class="footer-iconf" width="20" height="20">
-								  <use href="./images/icons.svg.svg#icon-twitter"></use>
-							  </svg>
-						  </a>
-					  </li>
-					  <li class="social-footer-item">
-						  <a href="" class="social-footer-link link">
-							  <svg aria-label="іконка фейсбук" class="footer-iconf" width="20" height="20">
-								  <use href="./images/icons.svg.svg#icon-facebook"></use>
-							  </svg>
-						  </a>
-					  </li>
-					  <li class="social-footer-item">
-						  <a href="" class="social-footer-link link">
-							  <svg aria-label="іконка лінкедін" class="footer-iconf" width="20" height="20">
-								  <use href="./images/icons.svg.svg#icon-linkedin"></use>
-							  </svg>
-						  </a>
-					  </li>
-				  </ul>
-  
-  
-			  </div>
-		  </div>
-		  </footer>
+				<div class="footer-div">
+					<a class="logo-footer link" href="./index.html"><span class="accent">Web</span>Studio</a>
+					<address>
+						<ul class="footer-contacts list">
+							<li class="footer-contacts-item">
+								<a class="footer-contact-adr link" href="">м. Київ, пр-т Лесі Українки, 26</a>
+							</li>
+							<li class="footer-contacts-item">
+								<a class="footer-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+							</li>
+							<li class="footer-contacts-item">
+								<a class="footer-contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+							</li>
+						</ul>
+					</address>
+				</div>
+				<div class="footer-icon">
+					<h3 class="foot-links">ПРИЄДНУЙТЕСЬ</h3>
+					<ul class="social-footer list">
+						<li class="social-footer-item">
+							<a href="" class="social-footer-link link">
+								<svg aria-label="іконка твітер" class="footer-iconf" width="20" height="20">
+									<use href="./images/icons.svg.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-footer-item">
+							<a href="" class="social-footer-link link">
+								<svg aria-label="іконка твітер" class="footer-iconf" width="20" height="20">
+									<use href="./images/icons.svg.svg#icon-twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-footer-item">
+							<a href="" class="social-footer-link link">
+								<svg aria-label="іконка фейсбук" class="footer-iconf" width="20" height="20">
+									<use href="./images/icons.svg.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-footer-item">
+							<a href="" class="social-footer-link link">
+								<svg aria-label="іконка лінкедін" class="footer-iconf" width="20" height="20">
+									<use href="./images/icons.svg.svg#icon-linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
