--- a/portfolio.html
+++ b/portfolio.html
@@ -209,7 +209,7 @@
 					</address>
 				</div>
 				<div class="footer-icon">
-					<h3 class="foot-links">ПРИЄДНУЙТЕСЬ</h3>
+					<p class="foot-links">ПРИЄДНУЙТЕСЬ</p>
 					<ul class="social-footer list">
 						<li class="social-footer-item">
 							<a href="" class="social-footer-link link">
